SWAGGER => Ajout d'historique dans les commentaires
