# API_SERVER/controllers/Announce.js
@@ -60,18 +60,29 @@ module.exports.deleteAnnounce = function (req, res, next, id) {
 };
 
 module.exports.addCommentary = function (req, res, next, body, idAnnounce) {
-  console.log('add commentary controller');
   Announce.addCommentary( body, idAnnounce )
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (error) {
-      console.log('this errorrr');
-      console.log(error);
       if (error.status) {
         res.status(error.status).json({ error: error.message });
       } else {
         res.status(500).json({ error: 'Erreur lors de l\'ajout du commentaire' });
       }
     });
+};
+
+module.exports.addCommentaryHistory = function (req, res, next, body, idAnnounce) {
+  Announce.addCommentaryHistory( body, idAnnounce )
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (error) {
+      if (error.status) {
+        res.status(error.status).json({ error: error.message });
+      } else {
+        res.status(500).json({ error: 'Erreur lors de l\'ajout d\'historique dans le commentaire' });
+      }
+  });
 };
